test/fail/fail_11.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_11.prsl:6:1: error: at 'f': Wrong number of arguments

f = func(a, b) { }
f(10);